# Speeture

./: .gitignore  CMakeLists.txt  README.md
inc/: FeatureExtractor.h  PitchEstimator.h  PitchPeriodEstimator.h  SimplePitchEstimator.h
src/: FeatureExtractor.cpp  PitchEstimator.cpp  PitchPeriodEstimator.cpp  SimplePitchEstimator.cpp
test/: CMakeLists.txt  PitchPeriodEstimatorTests.cpp  SimplePitchEstimatorTests.cpp
